# viswordrec-baseline

./: .gitignore  LICENSE  README.md  compute_model_brain_comparison_mne.py  dataloader.py  dataloaders.py  get_model_layer_activity.py  model_layer_activity.py  network.py  networks.py  plot_dipole_locations.py  plot_dipole_timecourses.py  plot_hyperparameter_tuning.py  plot_model_brain_comparison.py  plot_model_brain_comparison_mne.py  plot_model_brain_correlation.py  plot_model_brain_correlations.py  plot_model_layer_activity.py  plot_pixel_contributions.py  plot_post_hoc_exploration.py  requirements.txt  train_net.py
training_datasets/: construct_epasana-10kwords.py  construct_noise.py  construct_words-freq.py  construct_words.py  include_words.txt
training_datasets/render_stimulus/: Cargo.toml
training_datasets/render_stimulus/src/: lib.rs
