[package]
name = "render-stimulus"
version = "0.1.0"
edition = "2018"
authors = ["Marijn van Vliet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype="0.9"
image="0.24.2"
rand="0.8"
#imageproc={git = "https://github.com/image-rs/imageproc", branch="master"}
imageproc="0.23.0"
lazy_static="1.4"

[lib]
name = "render_stimulus"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]
